# SKINKSA

./: .gitignore
backend/: .env.example  COOLIFY_PASTE.env  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_address_and_province.py  0003_add_geo_fields.py  0004_upsell_offer_sku.py  0005_skinksa_product_skus.py  0006_admin_analytics.py  0007_product_slug_blueksa.py  0008_product_slug_blueskin.py  0009_competitive_offer_ladder.py
backend/app/: main.py
backend/app/api/v1/: routes_admin.py  routes_analytics.py  routes_internal.py  routes_orders.py  routes_products.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  analytics_event.py  offer.py  order.py  order_item.py  product.py  tracking_event.py  upsell_offer.py  webhook_delivery.py
backend/app/schemas/: admin.py  analytics.py  order.py  product.py
backend/app/seed/: seed_initial_data.py
backend/app/services/: ad_platform.py  geoip.py  hashing.py  ip_intel_secondary.py  phone.py  traffic_validity.py
backend/app/services/orders/: draft.py  finalize.py  summary.py  upsell.py
backend/app/services/tracking/: meta_capi.py  snap_capi.py  tiktok_capi.py
backend/app/services/webhooks/: sheets.py
backend/scripts/google-apps-script/: OrdersWebhook.gs
backend/tests/: test_geoip.py  test_hashing.py  test_orders.py  test_phone.py  test_traffic_validity.py  test_webhook.py
docs/: 00-project-brief.md  01-brand-positioning-icp.md  README.md  (+14 more)
(+72 files in other folders)
